# website

./: .gitignore  Dockerfile  README.md  compose.yaml  gulpfile.js  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
.github/: dependabot.yml
.github/workflows/: main.yml
scss/: global.scss  grid.scss  main.scss  utility.scss
scss/components/: breadcrumbs.scss  button.scss  checklist.scss  content.scss  footer.scss  form.scss  header.scss  preview.scss  table.scss
secrets/: mail_password.gpg  mail_recipient.gpg  mail_username.gpg  recaptcha_private_key.gpg  secret_key.gpg
src/main/: index.js
src/main/scss/: main.scss  values.scss
src/main/scss/components/: aspect.scss  button.scss  form.scss  header.scss  hero.scss  preview.scss  table.scss  wiki.scss
stratum/: __init__.py  gunicorn_conf.py
stratum/blueprints/: download.py  feedback.py  home.py  iconpacks.py  privacy.py  tools.py  wiki.py
stratum/config/: __init__.py  development.py  production.py
stratum/models/: icon_pack_pb2.py  iconpack.py
stratum/static/: robots.txt  sitemap.xml
stratum/templates/: base.jinja  download.jinja  error.jinja  feedback.jinja  home.jinja  iconpacks.jinja  privacy.jinja  tools.jinja
stratum/templates/wiki/: index.jinja  page.jinja  toc.jinja
