[project]
name = "stratumwebsite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.1.0",
    "certifi>=2026.2.25",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-caching>=2.3.1",
    "flask-mail>=0.10.0",
    "flask-wtf>=1.2.2",
    "gevent>=25.9.1",
    "gunicorn>=25.1.0",
    "mistune>=3.2.0",
    "protobuf>=7.34.0",
    "requests>=2.32.5",
]
